# ragdoll

./: .env.example  .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml
docs/: architecture.md  conf.py  configuration.md  data-sources.md  getting-started.md  index.md  usage.md  web-ui.md
docs/_static/: custom.css
docs/api/: index.md
src/ragdoll/: __init__.py  api.py  cli.py  config.py  ui.py
src/ragdoll/ingest/: __init__.py  bitbucket.py  chunker.py  code.py  jira.py  pdf.py
src/ragdoll/llm/: __init__.py  ollama.py
src/ragdoll/query/: __init__.py  rag.py  retriever.py
src/ragdoll/store/: __init__.py  vectordb.py
tests/: __init__.py  test_chunker.py
